force-app/main/default/objects/AsyncQueryCache__c/AsyncQueryCache__c.object-meta.xml
<CustomObject>
    <label>AsyncQueryCache</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>AsyncQueryCache Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AsyncQueryCaches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>