force-app/main/default/objects/AsyncQueryCache__c/fields/a__c.field-meta.xml
<CustomField>
    <fullName>a__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>a</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>