force-app/main/default/objects/AsyncQueryCache__c/fields/b__c.field-meta.xml
<CustomField>
    <fullName>b__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>b</label>
    <type>TextArea</type>
</CustomField>