force-app/main/default/objects/AsyncQueryCache__c/fields/c__c.field-meta.xml
<CustomField>
    <fullName>c__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>